force-app/main/default/objects/DuplicateAccountRelation__c/DuplicateAccountRelation__c.object-meta.xml
<CustomObject>
    <label>Duplicate Account Relation</label>
    <nameField>
        <displayFormat>DA-{0000000000}</displayFormat>
        <label>Duplicate Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>