force-app/main/default/objects/DuplicateAccountRelation__c/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Foreign Key for Account ID</description>
    <inlineHelpText>This field links the record to a specific Account in Salesforce.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Account Relations</relationshipLabel>
    <relationshipName>Duplicate_Account_Relations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>