force-app/main/default/objects/DuplicateAccountRelation__c/fields/lkp_ReferencedAccount__c.field-meta.xml
<CustomField>
    <fullName>lkp_ReferencedAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Foreign Key of Referenced Account</description>
    <inlineHelpText>This field links to another Account that is related to the first Account.</inlineHelpText>
    <label>Referenced Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Account Relations (Referenced Account)</relationshipLabel>
    <relationshipName>Duplicate_Account_Relations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>