force-app/main/default/objects/DuplicateAccountRelation__c/fields/pkl_ReasonCategory__c.field-meta.xml
<CustomField>
    <fullName>pkl_ReasonCategory__c</fullName>
    <description>Categorizes the reason for the Duplicate</description>
    <inlineHelpText>Provide the reason for the duplicate</inlineHelpText>
    <label>Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0017 | AG (SP) - Customer Discounts</fullName>
            </value>
            <value>
                <fullName>0018 | AG (SP) - Different GLN</fullName>
            </value>
            <value>
                <fullName>0030 | AG (SP) - Reseller is defined for every business end user (service contract partner)</fullName>
            </value>
            <value>
                <fullName>0031 | WE (SH) - Delivery to customer with MLB process (MLB sub-supplier, cross-company, direct)</fullName>
            </value>
            <value>
                <fullName>0032 | WE (SH) - Different invoice dispatch types for the same customer</fullName>
            </value>
            <value>
                <fullName>0033 | WE (SH) - Distributor Model</fullName>
            </value>
            <value>
                <fullName>0034 | WE (SH) - Customer operates several business units under the same address with different partner descriptions (e.g. plant codes)</fullName>
            </value>
            <value>
                <fullName>0035 | WE (SH) - Different delivery times</fullName>
            </value>
            <value>
                <fullName>0036 | WE (SH) - Different Shipping conditions</fullName>
            </value>
            <value>
                <fullName>0037 | WE (SH) - Cross Docking - same Hub Address but shop address coded in name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>