force-app/main/default/objects/DuplicateAccountRelation__c/fields/txt_ReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>txt_ReasonDescription__c</fullName>
    <description>Further description of Reason</description>
    <inlineHelpText>Provide a short explanation or context for the duplicate</inlineHelpText>
    <label>Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>